--- a/public/pages/donate.html
+++ b/public/pages/donate.html
@@ -98,7 +98,7 @@
             <p style="font-size: 25px; font-weight: 600;">Help us to make our region a better place.</p><br>
         </div>
         <div class="col-lg-3" style="margin-top: 2vw;">
-            <div class="card" style="box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.1)">
+            <div class="card" style="box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 white;">
                 <form>
                     <div class="card-header">
                         CHOOSE A MONTLY DONATION
@@ -128,12 +128,12 @@
                                 <label class="custom-control-label" for="customControlValidation4">Other &euro;</label>
                             </div>
                             <div class="form-group">
-                                <input placeholder="Amount" type="text" class="form-control" id="amount_actual" name="amount_actual" maxlength="5" data-rule-required="true" contenteditable="false">
-                            </div>
+                              <input placeholder="Amount" type="text" class="form-control" id="amount_actual" name="amount_actual" maxlength="5" data-rule-required="true" contenteditable="false">
+                          </div>
                         </li>
                     </ul>
                     <div class="card-footer">
-                        <button type="submit" class="btn btn-primary" data-toggle="modal">DONATE NOW</button>
+                        <button class="btn btn-primary" type="submit" onclick="return false;">DONATE NOW</button>
                     </div>
                 </form> 
             </div>
