--- a/public/index.html
+++ b/public/index.html
@@ -230,10 +230,10 @@
    
     <div class="info-about-us">
       <div class="container">
-        <div class="row align-items-center row-cols-1 row-cols-sm-2">
+        <div class="row align-items-center">
           <div class="col-md-9">
-            <h5 class="card-title" id="texticon1">Who we are</h5>
-            <p class="card-text" id="texticon1">Our association was born from a group of young people who cared about the well-being and health of their city. Thanks to their commitment and their desire to get involved, they have managed to join a large number of volunteers of all ages with the aim of safeguarding cities from degradation.</p>
+            <p class="textaboutus1" >Who we are</p>
+            <p class="textaboutus2">Our association was born from a group of young people who cared about the well-being and health of their city. Thanks to their commitment and their desire to get involved, they have managed to join a large number of volunteers of all ages with the aim of safeguarding cities from degradation.</p>
             <a href="./pages/team.html" type="button" class="btn btn-light">Team</a>
           </div>
           <div class="col-6 col-md-3">
